WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135730
[Mac] Parental Controls content filter is mistakenly enabled for HTTP responses
https://bugs.webkit.org/show_bug.cgi?id=135730
Summary
[Mac] Parental Controls content filter is mistakenly enabled for HTTP responses
Andy Estes
Reported
2014-08-07 15:13:34 PDT
[Mac] Parental Controls content filter is mistakenly enabled for HTTP responses
Attachments
Patch
(3.71 KB, patch)
2014-08-07 15:19 PDT
,
Andy Estes
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2014-08-07 15:14:08 PDT
<
rdar://problem/16567659
>
Andy Estes
Comment 2
2014-08-07 15:19:40 PDT
Created
attachment 236235
[details]
Patch
Andy Estes
Comment 3
2014-08-07 15:21:57 PDT
Comment on
attachment 236235
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=236235&action=review
> Source/WebCore/ChangeLog:11 > + pre-upstreaming behavior and only enable the content filter for HTTP responses.
ChangeLog typo: "... only enable the content filter for HTTPS responses."
Andy Estes
Comment 4
2014-08-07 15:27:38 PDT
Committed
r172293
: <
http://trac.webkit.org/changeset/172293
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug